# LIMITLESS

./: README.md
limitless-pub/: CMakeLists.txt  checksum.md
limitless-pub/conf/: init.dae  init.serv_lda  init.serv_lds  start.sh  start_tbon.sh  stop.sh  stop_tbon.sh
limitless-pub/doc/html/: Packed__sample_8hpp_source.html  annotated.html  classDir__path-members.html  classDir__path.html  classPacked__sample-members.html  classPacked__sample.html  classes.html  cliente__monitor_8hpp_source.html  common_8hpp_source.html  cpu__info_8hpp_source.html  daemon__global__params_8hpp_source.html  daemon__monitor_8hpp_source.html  devices__info_8hpp_source.html  dir_08770c43a9c401be6526eeac05f1a082.html  dir_1c4bf6b3d6f5e1226529834f39210d5d.html  dir_2c1ec4cfaf5ed43ec260b4f91f837847.html  dir_3c20749e46078323b537ef82e32dbf1e.html  dir_4e7e109077f8e2b189f586f1c102bc11.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_578404a2160f626da2e7688ae32c3499.html  dir_594afcae5edc3e2da7bb924033483965.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_66883c1fb4bb65f0999432db04e01f7b.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_69c4aa474a855ce9b1c118411c54014f.html  dir_7846659a8a0f04122ca77bc39a56277e.html  dir_810fa0f3751972e5d9f41a4c273724ff.html  dir__path_8hpp_source.html  dir_a41afb44cd77021f04ef0298981be91e.html  dir_a573004c1aa1ac4f8bc48460229ea7de.html  dir_b84a2b0648e7bbaaf3e881414237f3b9.html  dir_c5e1bb2b071111b32d72a912f9c315fe.html  dir_c5e6972d51c2d55695aa7c39ab110f58.html  dir_cbdb8362360e11eafe2fa3bc74cf0ffd.html  dir_d3e9293c01a72b2384d5bded84fcbc0e.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_da9d1f60b22a094d3f39025147373af5.html  dir_dcbe700abaa9babebc8f91806639ea75.html  files.html  functions.html  (+42 more)
limitless-pub/doc/html/search/: all_0.js  all_2.js  all_4.js  all_6.js  all_7.js  all_9.js  classes_0.js  classes_1.js  classes_3.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  searchdata.js
limitless-pub/doc/latex/: annotated.tex  classDir__path.tex  classPacked__sample.tex  md_README.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  refman.tex  refman.toc  structGpu__accu.tex  structGpu__dev.tex  structcpu__dev.tex  structcpu__stats.tex  structdevices__stats.tex  structhandle__args.tex  structhw__conf.tex  structio__dev.tex  structnet__dev.tex  structnet__stats.tex  structpacket.tex  structpower__cpu.tex  structreq__inf.tex  structtemp__features.tex
limitless-pub/include/: daemon_monitor.hpp
limitless-pub/lib_src/include/: Packed_sample.hpp  cpu_info.hpp  dir_path.hpp  library.h  memory_info.hpp  net_info.hpp
limitless-pub/lib_src/src/: Packed_sample.cpp  cliente_monitor.cpp  common.cpp  dir_path.cpp  network_data.cpp  sample_info.cpp  servidor_monitor.cpp  system_features.cpp
limitless-pub/src/: daemon_monitor.cpp  test_daemon.cpp
limitless-pub/test_server/: CMakeLists.txt
limitless-pub/utils/: daemon_reader.py
limitless-server-pub/: CMakeLists.txt  README.md  checksum.md  test_server.cpp
limitless-server-pub/lib_src/include/: cliente_monitor.hpp  common.hpp  daemon_global_params.hpp  devices_info.hpp  network_data.hpp  power_cpu_info.hpp  server_data.hpp  servidor_monitor.hpp  sqlite3.h  system_features.hpp  temp_info.hpp
limitless-server-pub/lib_src/src/: Packed_sample.cpp  cl_input.cpp  cpu_info.cpp  devices_info.cpp  memory_info.cpp  net_info.cpp  power_cpu_info.cpp  server_data.cpp  temp_info.cpp
limitless-server-pub/src/: daemon_monitor.cpp
